[package]
name = "filehandler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
lz4_flex = "0.11.3"
wellen = { version = "0.20.1", features = ["serde1"] }
wit-bindgen = "0.36.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
leb128 = "0.2.5"

